--- a/document.tex
+++ b/document.tex
@@ -3,7 +3,7 @@
 11pt, % font size
 parskip=half, % space between paragraphs instead of indentation
 print, % digital or print
-oneside, % oneside / twoside
+twoside, % oneside / twoside
 %	openright, % openright for title page and subsequent chapters on right pages in twosided layout
 ]{bsc}
 
@@ -103,8 +103,6 @@ Finally, I want to appreciate the feedback offered by my fellow students and fri
 \newpage
 \leavevmode\thispagestyle{plain}\newpage
 \printbibliography[title=References]{}
-\newpage
-\leavevmode\thispagestyle{plain}\newpage
 \include{selbstaendigkeit}
 % bibliography
 \end{document}
